fixed alignment for web hook messages

--- a/public/bootstrap/less/trp3Chat.less
+++ b/public/bootstrap/less/trp3Chat.less
@@ -271,7 +271,8 @@
   .commits {
     font-size: 12px;
     list-style: none;
-    padding-left: 3px;
+    padding-left: 0;
+    margin-left: 0;
   }
 
   .whicon {
